# ocanren-semantics

src/: dune  examples.ml  goal.ml  semantics_trace.ml  semantics_trace_tests.ml  state.ml  stream.ml  substitution.ml
src/v1/: compare_traces.ml  dune  examples.ml  ocanren_trace.ml  ocanren_trace_tests.ml  semantics_trace.ml  semantics_trace_tests.ml  stream.ml
src/v2/: dune  eval_trace.ml  trace_test.ml  types.ml  unify_test.ml
